...
                  <p className="text-sm text-slate-500 mb-4">
                    Make changes to your account here. Click save when
                    you&apos;re done.
                  </p>
                  <div className="space-y-4">
                    <Input label="Name" value="Pietro Schirano" />
                    <Input label="Username" value="@skirano" />
                    <Button variant="default">Save changes</Button>
                  </div>
                </TabsContent>
                <TabsContent
                  value="password"
                  className="mt-6 p-6 border border-slate-200 rounded-md"
...
